# PDTE

./: README.md
ABY_example/dectree/: CMakeLists.txt  decision_tree_test.cpp
ABY_example/dectree/UCI_dectrees/: boston  breast  digits  linnerud
ABY_example/dectree/common/: auxiliary-functions.cpp  auxiliary-functions.h  decision-tree-circuit.cpp  decision-tree-circuit.h  dectree.cpp  dectree.h  garbledBP.h  selection-functions.cpp  sndrcv.cpp  sndrcv.h
ABY_example/dectree/common/crypto_party/: crypto_party.h  dgk_party.cpp  dgk_party.h  paillier.cpp  paillier.h  paillier_party.cpp  paillier_party.h
ABY_example/dectree/common/selection_blocks/: e_SelectionBlock.cpp  e_SelectionBlock.h  permutation_network.cpp  permutation_network.h  selection_block.h  t_SelectionBlock.cpp  t_SelectionBlock.h
UCI_dectrees/: diabetes  iris  wine
XCMP_files/benchmark_gt/: dectree.hpp  hhh.cpp
XCMP_files/mcl/include/mcl/: elgamal.hpp
